fix sizes and positioning of banner coins on mobile screens

--- a/src/pages/trading-bots/ui/trading-bots-main/banner/bannerImage/styles.module.css
+++ b/src/pages/trading-bots/ui/trading-bots-main/banner/bannerImage/styles.module.css
@@ -10,7 +10,7 @@
 
   .bitcoinOne {
     position: absolute;
-    bottom: -6em;
+    bottom: -36em;
     left: -15em;
     width: 144px;
     height: 159.02px;
@@ -48,30 +48,30 @@
     position: relative;
 
     .mainRobot {
-      z-index: 2;
+      z-index: 0;
     }
 
     .bitcoinOne {
       position: absolute;
-      bottom: -6em;
-      left: -9em;
+      bottom: -36em;
+      left: -14em;
       z-index: 1;
     }
 
     .bitcoinTwo {
-      top: 8em;
-      left: -10em;
+      top: 10em;
+      left: -12em;
       z-index: 1;
     }
 
     .etheriumTwo {
-      top: 9em;
-      left: -28em;
+      top: 14em;
+      left: -34em;
     }
 
     .liteCoin {
-      top: -3em;
-      left: -22em;
+      top: 0;
+      left: -28em;
     }
   }
 }
@@ -88,26 +88,27 @@
 
     .bitcoinOne {
       position: absolute;
-      bottom: -1em;
-      left: 4em;
+      bottom: -31em;
+      left: 5em;
+      z-index: 2;
     }
 
     .bitcoinTwo {
       position: absolute;
       top: 5em;
-      left: 4em;
+      left: 5em;
     }
 
     .etheriumTwo {
       position: absolute;
-      top: 10em;
-      left: -15em;
+      top: 11em;
+      left: -14em;
     }
 
     .liteCoin {
       position: absolute;
-      top: -3em;
-      left: -8em;
+      top: 1em;
+      left: -9em;
       z-index: 1;
     }
   }
@@ -116,5 +117,38 @@
 @media only screen and (max-width: 48em) {
   .banner-right-side {
     max-width: 320px;
+
+    .mainRobot {
+      width: 345px;
+      height: 339.09px;
+      left: -14em;
+      z-index: 1;
+    }
+
+    .bitcoinOne {
+      position: absolute;
+      bottom: -28em;
+      left: 1em;
+      z-index: 3;
+    }
+
+    .bitcoinTwo {
+      position: absolute;
+      top: 5em;
+      left: 2em;
+    }
+
+    .etheriumTwo {
+      position: absolute;
+      top: 9em;
+      left: -12em;
+    }
+
+    .liteCoin {
+      position: absolute;
+      top: 0;
+      left: -8em;
+      z-index: -1;
+    }
   }
 }
